# Dengue-Forecast-Ensemble

./: Ensemble final.ipynb  Get the predictions.ipynb  LICENSE  README.md  Stack the predictions LASSO.ipynb  Stack the predictions MLP.ipynb  agg_predictions.ipynb  plot_forecasts.ipynb  pyproject.toml  utils.py
predictions/: ensemble.csv  ensemble_mandatory.csv
saved_models/: stacking_regressor_AC_2023.pkl  stacking_regressor_AC_2024.pkl  stacking_regressor_AL_2023.pkl  stacking_regressor_AL_2024.pkl  stacking_regressor_AM_2023.pkl  stacking_regressor_AM_2023_2024.pkl  stacking_regressor_AM_2024.pkl  stacking_regressor_AP_2023.pkl  stacking_regressor_AP_2024.pkl  stacking_regressor_BA_2023.pkl  stacking_regressor_BA_2024.pkl  stacking_regressor_CE_2023.pkl  stacking_regressor_CE_2023_2024.pkl  stacking_regressor_CE_2024.pkl  stacking_regressor_DF_2023.pkl  stacking_regressor_DF_2024.pkl  stacking_regressor_ES_2023.pkl  stacking_regressor_ES_2024.pkl  stacking_regressor_GO_2023.pkl  stacking_regressor_GO_2023_2024.pkl  stacking_regressor_GO_2024.pkl  stacking_regressor_MA_2023.pkl  stacking_regressor_MA_2024.pkl  stacking_regressor_MG_2023.pkl  stacking_regressor_MG_2023_2024.pkl  stacking_regressor_MG_2024.pkl  stacking_regressor_MS_2023.pkl  stacking_regressor_MS_2024.pkl  stacking_regressor_MT_2023.pkl  stacking_regressor_MT_2024.pkl  stacking_regressor_PA_2023.pkl  stacking_regressor_PA_2024.pkl  stacking_regressor_PB_2023.pkl  stacking_regressor_PB_2024.pkl  stacking_regressor_PE_2023.pkl  stacking_regressor_PE_2024.pkl  stacking_regressor_PI_2023.pkl  (+22 more)
