[tool.poetry]
name = "dengue-forecast-ensemble"
version = "0.1.0"
description = ""
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
epiweeks = "^2.3.0"
scipy = "^1.14.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
mosqlient = "^1.6.3"
seaborn = "^0.13.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
